--- a/SimpleTodo/app/src/main/res/layout/item_task.xml
+++ b/SimpleTodo/app/src/main/res/layout/item_task.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:descendantFocusability="blocksDescendants"
@@ -7,18 +7,39 @@
 
     <TextView
         android:id="@+id/tskName"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.99"
         android:text="TaskName"
-        android:textSize="24sp" />
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp"
+        android:layout_weight="0.97"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/tskStatus"
+        android:layout_toStartOf="@+id/tskStatus"
+        android:layout_alignBottom="@+id/tskStatus" />
 
     <CheckBox
         android:id="@+id/tskStatus"
         android:checked="false"
-        android:layout_centerVertical="true"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tsk_due_date"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Due: "
+        android:textSize="18sp"
+        android:textStyle="italic"
+        android:layout_below="@+id/tskName"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_toLeftOf="@+id/tskStatus"
+        android:layout_toStartOf="@+id/tskStatus" />
+
+</RelativeLayout>
